@@ -1,3 +1,7 @@
+2019-02-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* chkdvifont.c: Detect new JFM spec.
+
 2018-11-25  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* configure.ac: Version 20181125.
